--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <p>
     <audio controls id="player"></audio>
   </p>
+  <ul id="links"></ul>
   <script src="dest/index.js" type="module"></script>
 </body>
 </html>
