feat: 🎸 cut 1 sec

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <p>
     <audio controls id="player"></audio>
   </p>
+  <p>
+    <button id="cut1">Cut first 1.00 sec</button>
+  </p>
   <ul id="links"></ul>
   <script src="dest/index.js" type="module"></script>
 </body>
