feat: 🎸 cut by specific time

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <audio controls id="player"></audio>
   </p>
   <p>
-    <button id="cut1">Cut first 1.00 sec</button>
+    <button id="cutStart">Cut start</button>
+    for
+    <input type="number" id="cutStartSec" min="0" step="0.01" value="1.00" />
+    sec.
   </p>
   <ul id="links"></ul>
   <script src="dest/index.js" type="module"></script>
