--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <audio controls id="player"></audio>
   </p>
   <p>
-    <button id="cutStart">Cut start</button>
-    for
+    <button id="cut">Cut</button>
+    start for
     <input type="number" id="cutStartSec" min="0" step="0.01" value="1.00" />
+    , end for
+    <input type="number" id="cutEndSec" min="0" step="0.01" value="1.00" />
     sec.
   </p>
   <ul id="links"></ul>
