--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
     <button id="record">Record</button>
     <button id="stop">Stop</button>
   </p>
-  <p>
+  <p class="VStack">
     <audio controls id="player"></audio>
   </p>
   <p>
     <button id="trim">Trim</button>
     start for
-    <input type="number" id="trimStartSec" min="0" step="0.01" value="1.00" />
+    <input type="number" id="trimStartSec" min="0" step="0.01" value="0.00" />
     , end for
-    <input type="number" id="trimEndSec" min="0" step="0.01" value="1.00" />
+    <input type="number" id="trimEndSec" min="0" step="0.01" value="0.00" />
     sec.
+  </p>
+  <p>
+    <audio controls id="player-mp3"></audio>
   </p>
   <ul id="links"></ul>
   <script src="dest/index.js" type="module"></script>
