feat: 🎸 progress bar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     , end for
     <input type="number" id="trimEndSec" min="0" step="0.01" value="0.00" />
     sec.
+    <br>
+    <progress id="trimProgress" max="1" value="0"></progress>
   </p>
   <p>
     <audio controls id="player-mp3"></audio>
